--- a/prestol/css/main.css
+++ b/prestol/css/main.css
@@ -2419,7 +2419,6 @@ h3,
   border-bottom: 1px solid #e5e5e5;
 }
 .basket__item-img img {
-  width: 100%;
   height: 100%;
 }
 .basket__item-info {
@@ -2484,6 +2483,7 @@ h3,
 .basket__item-delete {
   padding: 5px 5px 3px;
   margin-right: 18px;
+  transition: box-shadow 0.5s;
 }
 .basket__item-delete:active {
   box-shadow: 0px 0px 3px 0px #000000 inset;
@@ -2540,6 +2540,52 @@ h3,
   font-size: 13px;
   text-transform: uppercase;
   color: #343434;
+  transition: background-image 0.4s;
+}
+.btn-right:hover {
+  background-image: -moz-linear-gradient(90deg, #fbce74 100%, #f6bb45 1%);
+  background-image: -webkit-linear-gradient(90deg, #fbce74 100%, #f6bb45 1%);
+  background-image: -ms-linear-gradient(90deg, #fbce74 100%, #f6bb45 1%);
+}
+@media screen and (max-width: 750px) {
+  .basket__item-info {
+    order: -1;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+  }
+  .basket__item-amount,
+  .basket__item-area-once,
+  .basket__item-area-total {
+    margin: 0 10px;
+  }
+  .basket__item {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 610px) {
+  .basket__item-img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .basket__item-amount {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 10px 0;
+  }
+  .basket__footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column-reverse;
+    margin-top: 20px;
+    height: 88px;
+  }
 }
 #main {
   min-height: 100%;
