--- a/prestol/css/main.css
+++ b/prestol/css/main.css
@@ -2562,6 +2562,7 @@ h3,
   .basket__item {
     flex-wrap: wrap;
     padding-bottom: 10px;
+    padding-top: 10px;
   }
 }
 @media screen and (max-width: 610px) {
