--- a/pakhi/css/style.css
+++ b/pakhi/css/style.css
@@ -38,8 +38,8 @@ label{
 	margin:0;
 }
 
-.cnt {
-	height: 72vh;
+.main-content {
+	height: 73vh;
 }
 
 .header__logo {
@@ -48,7 +48,7 @@ label{
 	left: 0;
 	background: #fff;
 	border: 2px solid #ed9418;
-	width: 25%;
+	width: 18.7%;
 }
 
 .header__logo img {
@@ -71,7 +71,6 @@ label{
 .navigation {
 	margin-left: auto;
 	margin-top: -20px;
-	z-index: 9999;
 }
 
 .prom__icon {
@@ -117,7 +116,7 @@ svg #basket-svg, svg #search-svg {
 /*-----start-header----*/
 .header {
 	width: 100%;
-	height: 110px;
+	height: 70px;
 }
 
 
@@ -2853,10 +2852,23 @@ li.selector {
 .standard {
 	width: 100%;
 }
-
+@media screen and (max-width: 1200px) {
+	.header__logo {
+		width: 21.7%;
+	}
+}
 @media screen and (max-width: 992px) {
 	.header .container {
 		flex-wrap: wrap;
+	}
+
+	.header {
+		height: 105px;
+	}
+
+	.navigation {
+		margin-left: 14%;
+		margin-bottom: 2%;
 	}
 
 	.nav {
@@ -2865,7 +2877,7 @@ li.selector {
 
 	.header__logo {
 		order: 1;
-		width: 20%;
+		width: 16.7%;
 	}
 
 	.header__control-btn {
@@ -3506,8 +3518,12 @@ h3.c-head{
 }
 
 @media screen and (max-width: 800px) {
+	.header {
+		height: 115px;
+	}
+
 	.navigation {
-		z-index: 10;
+		z-index: 9999;
 	}
 
 	.header__logo {
