--- a/caramel/css/style.css
+++ b/caramel/css/style.css
@@ -2,6 +2,10 @@ html {
     font-size: 14px;
 }
 
+body {
+    background: #eee;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -15,6 +19,16 @@ button {
     outline: none;
     border: none;
     background: none;
+}
+
+@font-face {
+    font-family: 'KhandLight';
+    src: url('../fonts/Khand-Light.ttf');
+}
+
+@font-face {
+    font-family: 'KhandMedium';
+    src: url('../fonts/Khand-Medium.ttf');
 }
 
 .canvas-animation {
@@ -32,13 +46,11 @@ button {
 }
 
 .main-header {
-    font-family: 'Khand', sans-serif;
     color: white;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 3%;
 }
 
 .main-header__title, .main-header__desc {
@@ -46,12 +58,14 @@ button {
 }
 
 .main-header__title {
+    font-family: KhandMedium, sans-serif;
     font-weight: 500;
     font-size: 5.7rem;
     text-transform: uppercase;
 }
 
 .main-header__desc {
+    font-family: KhandLight, sans-serif;
     font-weight: 300;
     font-size: 2.038rem;
     line-height: 1.1;
@@ -243,6 +257,11 @@ button {
     opacity: 0;
 }
 
+.open-popup-container line {
+    stroke: #ce9500;
+    stroke-width: 4;
+}
+
 /* Glaces */
 .glaces {
     margin-top: 13vh;
@@ -267,8 +286,303 @@ button {
     transform: rotate(90deg);
 }
 
-.glaces line {
-    stroke: #ce9500;
-    stroke-width: 4;
+/* Sodas */
+.sodas {
+    margin-left: 65vw;
+    margin-top: 10vh;
 }
 
+.sodas .open-popup-container {
+    margin-top: 86%;
+    height: 40%;
+}
+
+.sodas .open-popup-container:before {
+    bottom: 0;
+    right: 0;
+    transform: rotate(253deg);
+}
+
+/* Produits laitiers */
+.produits-laitiers {
+    margin-top: 65vh;
+    margin-left: 40vw;
+    width: 47%;
+}
+
+.produits-laitiers .product__wrapper {
+    padding-bottom: 40%;
+}
+
+.produits-laitiers .product__title {
+    right: 0;
+    bottom: 0;
+}
+
+.produits-laitiers .open-popup-container:before {
+    right: 0;
+    transform: rotate(198deg);
+}
+
+.produits-laitiers .open-popup-container {
+    margin-top: 17%;
+    width: 36%;
+}
+
+.produits-laitiers .btn_open-popup {
+    bottom: 0;
+}
+
+/* Chocolats */
+.chocolats {
+    margin-top: 55%;
+    width: 33%;
+}
+
+.chocolats .product__wrapper {
+    padding-bottom: 42%;
+}
+
+.chocolats .product__title {
+    right: 0;
+    top: 0;
+}
+
+.chocolats .open-popup-container {
+    width: 65%;
+    height: 80%;
+    margin-left: 20%;
+}
+
+.chocolats .btn_open-popup {
+    bottom: 0;
+    right: 12px;
+}
+
+.chocolats .open-popup-container:before {
+    transform: rotate(80deg);
+}
+
+/* Biers */
+.biers {
+    margin-top: 98%;
+    margin-left: 17vw;
+}
+
+.biers .product__title {
+    bottom: 0;
+    right: 0;
+}
+
+.biers .btn_open-popup {
+    right: 0;
+}
+
+.biers .open-popup-container:before {
+    transform: rotate(57deg);
+}
+
+/* Biscuits */
+.biscuits {
+    margin-top: 135%;
+    right: 14%;
+    width: 25%;
+}
+
+.biscuits .product__wrapper {
+    padding-bottom: 60%;
+}
+
+.biscuits .product__title {
+    bottom: 0;
+}
+
+.biscuits .open-popup-container {
+    width: 60%;
+    left: 35%;
+    top: 16%;
+}
+
+.biscuits .open-popup-container:before {
+    right: 0;
+    transform: rotate(200deg);
+}
+
+.biscuits .btn_open-popup {
+    bottom: 0;
+}
+
+/* Soupes and sauces */
+.soupes-and-sauces {
+    margin-top: 162%;
+    width: 44%;
+}
+
+.soupes-and-sauces .product__wrapper {
+    padding-bottom: 61%;
+}
+
+.soupes-and-sauces .product__title {
+    right: 0;
+    bottom: 0;
+}
+
+.soupes-and-sauces .open-popup-container {
+    width: 32%;
+    left: 27%;
+    height: 40%;
+}
+
+.soupes-and-sauces .btn_open-popup {
+    bottom: 0;
+    right: 0;
+}
+
+.soupes-and-sauces .open-popup-container:before {
+    transform: rotate(85deg);
+}
+
+/* Boissons energisantes */
+.boissons-energisantes {
+    margin-top: 183%;
+    right: 0;
+    width: 35%;
+}
+
+.boissons-energisantes .product__wrapper {
+    padding-bottom: 60%;
+}
+
+.boissons-energisantes .product__title {
+    bottom: 0;
+}
+
+.boissons-energisantes .open-popup-container {
+    width: 40%;
+    left: 45%;
+}
+
+.boissons-energisantes .btn_open-popup {
+    right: 0;
+    bottom: 0;
+}
+
+.boissons-energisantes .open-popup-container:before {
+    transform: rotate(82deg);
+}
+
+@media screen and (max-width: 1700px){
+    .biers .btn_open-popup {
+        right: -38%;
+        bottom: 16%;
+    }
+
+    .produits-laitiers .open-popup-container {
+        width: 41%;
+    }
+
+    .boissons-energisantes .open-popup-container {
+        width: 53%;
+    }
+
+    .biscuits .open-popup-container {
+        width: 69%;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .main-header__title {
+        font-size: 4rem;
+    }
+
+    .main-header__desc {
+        font-size: 1.4rem;
+    }
+
+    .glaces {
+        margin-top: 7vh;
+    }
+
+    .chocolats .btn_open-popup {
+        bottom: -39%;
+        right: -34%;
+    }
+
+    .produits-laitiers {
+        margin-top: 38vh;
+        margin-left: 35vw;
+        width: 60%;
+    }
+
+    .produits-laitiers .open-popup-container {
+        width: 45%;
+    }
+
+    .biers .btn_open-popup {
+        right: -88%;
+        bottom: 16%;
+    }
+
+    .biscuits {
+        width: 35%;
+    }
+
+    .soupes-and-sauces .open-popup-container {
+        width: 47%;
+        height: 57%;
+    }
+
+    .boissons-energisantes {
+        right: 76px;
+    }
+
+    .boissons-energisantes .btn_open-popup {
+        right: -36%;
+        bottom: -13%;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .sodas {
+        margin-top: 5vh;
+    }
+
+    .produits-laitiers {
+        margin-top: 29vh;
+    }
+
+    .biers .btn_open-popup {
+        right: -120%;
+    }
+
+    .biscuits .product__title {
+        bottom: 64%;
+    }
+
+    .soupes-and-sauces {
+        margin-top: 158%;
+    }
+
+    .boissons-energisantes {
+        right: 4px;
+    }
+
+    .boissons-energisantes .btn_open-popup {
+        left: 0;
+        bottom: 0;
+    }
+
+    .boissons-energisantes .open-popup-container {
+        width: 79%;
+        left: 0;
+    }
+
+    .boissons-energisantes .open-popup-container:before {
+        transform: rotate(191deg);
+        right: 0;
+    }
+
+    .boissons-energisantes .product__title {
+        top: 90%;
+    }
+}
